# jacobson

./: .editorconfig  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  alembic.ini  compose.yml  docker-compose.yml  edgedb.toml  entry_points.cfg  index.html  jacobson-dev.yaml  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  requirements_dev.txt  sample.env  schema.graphql  setup.cfg
Database/: engine.py
api/: api.py  app.py  auth.py  context.py  models.py  resolvers.py  schema.py  security.py
api/address/: graphql_inputs.py  graphql_types.py  inputs.py  types.py
api/address/graphql_inputs/: index.html
api/address/graphql_types/: index.html
api/app/: index.html
api/jwt/: jwt_manager.py  jwt_type.py
api/resolvers/: index.html
api/schema/: index.html
api/user/: inputs.py  types.py
changelog/: index.html
containers/: index.html
containers/app/: Containerfile.dev
database/: engine.py  functions.py
database/engine/: index.html
database/entities/: address.py
database/functions/: index.html
database/migrations/: env.py  index.html  script.py.mako
database/migrations/versions/: 16486dde779e_data_seed_populate_state.py  b065b6143c4f_create_users_table.py  c13b281db692_create_state_city_and_address_tables.py  e5e1bdc106c3_create_state_city_and_address_tables.py  edd463bf3466_data_seed_populate_state.py
database/models/: brazil.py  user.py
database/models/brazil/: index.html
database/repositories/: brazil.py  pagination.py  user.py
database/schema/: brazil.esdl  futures.esdl
database/schema/migrations/: 00001.edgeql  00002.edgeql
dbschema/: brazil.esdl
docker/: default_db.sql
docker/api/: DockerFile  DockerFile.dev  Dockerfile.dev
docker/app/: Dockerfile.dev
docker/database/: DockerFile  Dockerfile.dev
documentation/docs/: README.md  changelog.md  containers.md  license.md  tests.md
documentation/docs/api/: app.md  auth.md  context.md  resolvers.md  schema.md  security.md
documentation/docs/api/address/: graphql_inputs.md  graphql_types.md  inputs.md  types.md
documentation/docs/api/jwt/: jwt_manager.md  jwt_type.md
documentation/docs/api/user/: inputs.md  types.md
documentation/docs/database/: engine.md  functions.md  migrations.md
documentation/docs/database/models/: brazil.md  user.md
documentation/docs/database/repositories/: brazil.md  pagination.md  user.md
documentation/docs/plugins/: plugins_controller.md  protocol.md
documentation/docs/plugins/cep_aberto/: cep_aberto.md
documentation/docs/plugins/viacep/: viacep.md
documentation/docs/utils/: settings.md
documentation/site/: 404.html  index.html  objects.inv
documentation/site/api/address/graphql_inputs/: index.html
documentation/site/api/address/graphql_types/: index.html
documentation/site/api/address/inputs/: index.html
documentation/site/api/address/types/: index.html
documentation/site/api/app/: index.html
documentation/site/api/auth/: index.html
documentation/site/api/context/: index.html
documentation/site/api/jwt/jwt_manager/: index.html
documentation/site/api/jwt/jwt_type/: index.html
documentation/site/api/resolvers/: index.html
documentation/site/api/schema/: index.html
documentation/site/api/security/: index.html
documentation/site/api/user/inputs/: index.html
documentation/site/assets/javascripts/: bundle.56dfad97.min.js  bundle.ad660dcc.min.js  bundle.fe8b6f2b.min.js
documentation/site/assets/stylesheets/: main.35f28582.min.css  main.35f28582.min.css.map  main.3cba04c6.min.css  main.3cba04c6.min.css.map  main.6543a935.min.css  main.6543a935.min.css.map
documentation/site/changelog/: index.html
documentation/site/containers/: index.html
documentation/site/database/engine/: index.html
documentation/site/database/functions/: index.html
documentation/site/database/migrations/: index.html
documentation/site/license/: index.html
documentation/site/plugins/plugins_controller/: index.html
documentation/site/plugins/protocol/: index.html
documentation/site/search/: search_index.json
documentation/site/tests/: index.html
documentation/site/utils/settings/: index.html
hooks/: commit-msg  installhooks.sh
jacobson/: engine.py  functions.py
jacobson/api/: app.py  auth.py  context.py  resolvers.py  schema.py
jacobson/api/address/: inputs.py  types.py
jacobson/api/jwt/: jwt_manager.py
jacobson/api/user/: inputs.py  types.py
jacobson/database/: engine.py
jacobson/database/entities/: address.py
jacobson/database/functions/: functions.py
jacobson/database/migrations/: env.py
jacobson/database/migrations/versions/: 16486dde779e_data_seed_populate_state.py  e5e1bdc106c3_create_state_city_and_address_tables.py
jacobson/database/models/: user.py
jacobson/database/repositories/: brazil.py  user.py
jacobson/entities/: address.py
jacobson/plugins/: plugins_controller.py  protocol.py
jacobson/plugins/cep_aberto/: cep_aberto.py
jacobson/plugins/viacep/: viacep.py
license/: index.html
license-templates/: LICENSE.txt
plugins/: plugins_controller.py  protocol.py
plugins/cep_aberto/: cep_aberto.py
plugins/cep_aberto/cep_aberto/: index.html
plugins/plugins_controller/: index.html
plugins/protocol/: index.html
plugins/viacep/: viacep.py
plugins/viacep/viacep/: index.html
search/: search_index.json
tests/: index.html
tests/api/: test_schema.py
tests/api/address/: test_inputs.py  test_types.py
tests/integration/: __init__.py  conftest.py  factories.py  test_mutation.py  test_query.py
tests/integration/address/: test_mutation.py  test_query.py
tests/integration/user/: test_mutation.py
tests/plugins/cep_aberto/: __init__.py  test_cep_aberto.py
tests/plugins/viacep/: test_viacep.py
tests/unit/api/: test_schema.py
tests/unit/api/address/: test_inputs.py  test_types.py
tests/unit/plugins/cep_aberto/: test_cep_aberto.py
tests/unit/plugins/viacep/: test_viacep.py
tests/unit/utils/: test_settings.py
tests/utils/: test_settings.py
utils/: settings.py
utils/settings/: index.html
(+9 files in other folders)
