[metadata]
name = jacobson
author = Krisque
description = A self-hosted zip-code API.
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE

[options]
entry_points = file:entry_points.cfg
install_requires =
  mariadb
  python-dotenv
  sqlmodel
  fastapi
  uvicorn[standard]
  strawberry-graphql
  jinja2

setup_requires = setuptools_scm
python_requires = >=3.10
include_package_data = True
packages = find:

[options.extras_require]
dev =
    black
    pytest
    pytest-schema

[black]
max-line-length = 79
